2007-06-07 09:17  pnasrat

	* Makefile, genpkgmetadata.py, readMetadata.py, docs/createrepo.8:
	  This patch adds a --update option to createrepo.
	  https://lists.dulug.duke.edu/pipermail/rpm-metadata/2007-March/000756.html
	  Patch from Mike Bonnet <mikeb@redhat.com>

2007-05-18 16:01  pnasrat

	* dumpMetadata.py: Fix for older rpm versions Christoph Thiel
	  <cthiel@suse.de>

2007-05-16 09:05  pnasrat

	* ChangeLog, Makefile, createrepo.spec, genpkgmetadata.py: Update
	  ChangeLog Bump version to 0.4.9

2007-05-16 09:02  pnasrat

	* dumpMetadata.py: Figure out appropriate dbversion Jeremy Katz
	  <katzj@redhat.com>

2007-05-16 08:59  pnasrat

	* dumpMetadata.py:   createrepo-0.4.8-cachefix.patch
	    * changes the way the hashkey for the cache is generated. (The
	  original
	      version just used rpm.RPMTAG_SIGMD5, which was the same for
	  the same
	      signed and unsigned package. However, this lead to a wrong
	  checksum
	      ending up in the metadata.)
	  Christoph Thiel <cthiel@suse.de>

2007-05-16 08:58  pnasrat

	* genpkgmetadata.py:  createrepo-0.4.8-skip-symlinks.patch
	    * adds an option to skip symlinks (-S, --skip-symlinks)
	  Christoph Thiel <cthiel@suse.de>

2007-02-13 04:43  skvidal

	* ChangeLog:
	  update changelog, again

2007-02-13 04:40  skvidal

	* Makefile:
	  add copying and copying.lib to makefile for 'make archive'

2007-02-13 04:37  skvidal

	* ChangeLog: check in changelog

2007-02-13 04:37  skvidal

	* Makefile: and makefile ver

2007-02-13 04:37  skvidal

	* createrepo.spec, genpkgmetadata.py: mark as 0.4.8

2007-02-08 10:02  pnasrat

	* COPYING.lib, createrepo.spec: Add LGPL file

2007-02-08 10:00  pnasrat

	* COPYING, createrepo.spec: Add COPYING

2007-02-07 20:35  skvidal

	* dumpMetadata.py: merge in Christoph Thiel's patch to fix string
	  conversion for odd EVR's

2007-02-07 20:34  skvidal

	* genpkgmetadata.py:
	  merge Jesse Keatings' patch to find groups file properly

2007-02-07 06:16  skvidal
