@@ -1,6 +1,4 @@
 #!/usr/bin/env python
-# $Id$
-#
 # This tools is used to insert arbitrary metadata into an RPM repository.
 # Example:
 #           ./modifyrepo.py updateinfo.xml myrepo/repodata
