@@ -1,3 +1,7 @@
+2007-12-03 04:33  lmacken
+	* docs/modifyrepo.8, createrepo.spec, docs/Makefile:
+	Add a man page for modifyrepo
+
 2007-06-07 09:17  pnasrat
 
 	* Makefile, genpkgmetadata.py, readMetadata.py, docs/createrepo.8:
